--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Hikers Blog &mdash; Colorlib Website Template</title>
+    <title>Tarekul Islam</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -37,14 +37,14 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-6 logo">
-            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">Hikers</a></h1>
+            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">Tarekul Islam</a></h1>
           </div>
           
           <div class="col-6 mr-auto py-3 text-right" style="position: relative; top: 3px;">
             <div class="social-icons d-inline">
-              <a href="#"><span class="icon-facebook"></span></a>
-              <a href="#"><span class="icon-twitter"></span></a>
-              <a href="#"><span class="icon-instagram"></span></a>
+              <a href="www.facebook.com/niloy.id"><span class="icon-facebook"></span></a>
+              <a href="www.twitter.com/tarekul20"><span class="icon-twitter"></span></a>
+              
             </div>
             <a href="#" class="site-menu-toggle js-menu-toggle text-black d-inline-block d-xl-none"><span class="icon-menu h3"></span></a></div>
           </div>
