--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
           <div class="col-md-7">
             
-            <a href="single.html" class="hentry img-2 v-height mb30 gradient" style="background-image: url('images/img_1.jpg');">
+            <a href="single.html" class="hentry img-2 v-height mb30 gradient" style="background-image: url('images/img_abc.jpg');">
               <span class="post-category text-white bg-success">Nature</span>
               <div class="text text-sm">
                 <h2>The 20 Biggest Fintech Companies In America 2019</h2>
