--- a/category.html
+++ b/category.html
@@ -96,11 +96,11 @@
           <div class="col-md-12 col-lg-8 main-content">
             
             <div class="entry2 mb-5">
-              <a href="single.html"><img src="images/img_1.jpg" alt="Image" class="img-fluid rounded"></a>
+              <a href="single.html"><img src="images/img_1dddd.jpg" alt="Image" class="img-fluid rounded"></a>
               <span class="post-category text-white bg-primary mb-3">Sports</span>
               <h2><a href="single.html">The 20 Biggest Fintech Companies In America 2019</a></h2>
               <div class="post-meta align-items-center text-left clearfix">
-                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></figure>
+                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_ddd.jpg" alt="Image" class="img-fluid"></figure>
                 <span class="d-inline-block mt-1">By <a href="#">Carrol Atkinson</a></span>
                 <span>&nbsp;-&nbsp; February 10, 2019</span>
               </div>
@@ -108,11 +108,11 @@
             </div>
 
             <div class="entry2 mb-5">
-              <a href="single.html"><img src="images/img_2.jpg" alt="Image" class="img-fluid rounded"></a>
+              <a href="single.html"><img src="images/img_2ddd.jpg" alt="Image" class="img-fluid rounded"></a>
               <span class="post-category text-white bg-primary mb-3">Sports</span>
               <h2><a href="single.html">The 20 Biggest Fintech Companies In America 2019</a></h2>
               <div class="post-meta align-items-center text-left clearfix">
-                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></figure>
+                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_1dddd.jpg" alt="Image" class="img-fluid"></figure>
                 <span class="d-inline-block mt-1">By <a href="#">Carrol Atkinson</a></span>
                 <span>&nbsp;-&nbsp; February 10, 2019</span>
               </div>
@@ -124,7 +124,7 @@
               <span class="post-category text-white bg-primary mb-3">Sports</span>
               <h2><a href="single.html">The 20 Biggest Fintech Companies In America 2019</a></h2>
               <div class="post-meta align-items-center text-left clearfix">
-                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></figure>
+                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_1ddd.jpg" alt="Image" class="img-fluid"></figure>
                 <span class="d-inline-block mt-1">By <a href="#">Carrol Atkinson</a></span>
                 <span>&nbsp;-&nbsp; February 10, 2019</span>
               </div>
@@ -132,11 +132,11 @@
             </div>
 
             <div class="entry2 mb-5">
-              <a href="single.html"><img src="images/img_4.jpg" alt="Image" class="img-fluid rounded"></a>
+              <a href="single.html"><img src="images/img_4ddd.jpg" alt="Image" class="img-fluid rounded"></a>
               <span class="post-category text-white bg-primary mb-3">Sports</span>
               <h2><a href="single.html">The 20 Biggest Fintech Companies In America 2019</a></h2>
               <div class="post-meta align-items-center text-left clearfix">
-                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></figure>
+                <figure class="author-figure mb-0 mr-3 float-left"><img src="images/person_1ddd.jpg" alt="Image" class="img-fluid"></figure>
                 <span class="d-inline-block mt-1">By <a href="#">Carrol Atkinson</a></span>
                 <span>&nbsp;-&nbsp; February 10, 2019</span>
               </div>
